= Version History =

x.x:

- added: support for user support staff members
- fixed: saving SAML attributes on login

2.3 (2013-09-30):

- added: bulk delete listing/action for super admins to remove users
- added: option to disable subsite topbar
- added: option to disable htmlawed filtering for admins on subsites
- fixed: user can no longer register on an invitation only site without invitation
- fixed: no information when no members found
- fixed: using a non existing function invalidate_cache_for_entity
- fixed: pleio_api admin settings menu item not visible
- fixed: access bug in analytics view
- fixed: css/js caching issues
- fixed: new users invited for an autojoin group are not a member of the group after registration
- fixed: able to view a group on a different (sub)site
- fixed: caching of wrong plugin on subsites
- changed: invitation only sites can now have a register page but no link to it
- changed: order of the access list from least to most access
- changed: activity page title now matches document title
- changed: activated the fiveminute cron on all subsites, needed for the pleio_api plugin

2.2.1 (2013-05-22):

- changed: user_hover menu admin section supports waternet_workorders
- changed: topbar user dropdown now has two more links and is wider
- fixed: group invite page menu counter
- fixed: group invite dropdown counter

2.2 (2013-05-06):

- added: Elgg 1.8.15 core files
- added: Memcache namespace prefix and stats logging
- changed: temporary fix to copy Piwik setting from phloor_analytics_piwik to analytics
- changed: subsite acl display name now contains more text
- changed: new subsite now have their default access set to the subsite level
- changed: some depricated functions to the new functions
- changed: handling of saving the site url (inline with Elgg core)
- fixed: PHP notice undeclared variable
- fixed: PHP warning in content_stats widget
- fixed: PHP undefined index warnings in web_services.php