@@ -1,7 +1,7 @@
 <?php
 
-	admin_gatekeeper();
-	
+	global $SUBSITE_MANAGER_IMPORTING_USERS;
+
 	$columns = get_input("columns");
 	$message = get_input("message");
 	
@@ -13,14 +13,17 @@
 	
 	set_time_limit(0);
 	
-	if(!empty($columns)){
-		if(in_array("displayname", $columns) && in_array("email", $columns)){
+	if (!empty($columns)) {
+		if (in_array("displayname", $columns) && in_array("email", $columns)) {
 			$csv_location = $_SESSION["subsite_manager_import"]["location"];
 			
 			$name_column = array_search("displayname", $columns);
 			$email_column = array_search("email", $columns);
 			
-			if($fh = fopen($csv_location, "r")){
+			if ($fh = fopen($csv_location, "r")) {
+				// set flag to let other parts of the system know what we're doing
+				$SUBSITE_MANAGER_IMPORTING_USERS = true;
+				
 				$users_created = 0;
 				$users_already = 0;
 				
@@ -28,13 +31,13 @@
 				$hidden = access_get_show_hidden_status();
 				access_show_hidden_entities(true);
 				
-				while(($data = fgetcsv($fh, 0, ";")) !== false){
+				while (($data = fgetcsv($fh, 0, ";")) !== false) {
 					$email = $data[$email_column];
 					$displayname = $data[$name_column];
 					
-					if(!($users = get_user_by_email($email))){
+					if (!($users = get_user_by_email($email))) {
 						// get username
-						if(in_array("username", $columns)){
+						if (in_array("username", $columns)) {
 							$col = array_search("username", $columns);
 							$username = $data[$col];
 						} else {
@@ -42,16 +45,16 @@
 						}
 						
 						// get password
-						if(in_array("password", $columns)){
+						if (in_array("password", $columns)) {
 							$col = array_search("password", $columns);
 							$password = $data[$col];
 						} else {
 							$password = generate_random_cleartext_password();
 						}
 						
-						if(!empty($username) && !empty($email) && !empty($displayname) && !empty($password)){
+						if (!empty($username) && !empty($email) && !empty($displayname) && !empty($password)) {
 							try {
-								if($user_guid = register_user($username, $password, $displayname, $email)){
+								if ($user_guid = register_user($username, $password, $displayname, $email)) {
 									$users_created++;
 									$user = get_user($user_guid);
 									
@@ -59,24 +62,24 @@
 									elgg_set_user_validation_status($user->getGUID(), true, "email");
 									
 									// add user to subsite
-									if(subsite_manager_on_subsite()){
+									if (subsite_manager_on_subsite()) {
 										if(!$site->isUser($user->getGUID())){
 											$site->addUser($user->getGUID());
 										}
 									}
 									
 									// add metadata
-									foreach($columns as $col_id => $metadata_name){
-										if(!in_array($metadata_name, array("username", "displayname", "email", "password"))){
-											if($profile_fields[$metadata_name] == "tags"){
+									foreach ($columns as $col_id => $metadata_name) {
+										if (!in_array($metadata_name, array("username", "displayname", "email", "password"))) {
+											if ($profile_fields[$metadata_name] == "tags") {
 												$value = string_to_tag_array($data[$col_id]);
 											} else {
 												$value = $data[$col_id];
 											}
 											
-											if(!empty($value)){
-												if(is_array($value)){
-													foreach ($value as $v){
+											if (!empty($value)) {
+												if (is_array($value)) {
+													foreach ($value as $v) {
 														create_metadata($user->getGUID(), $metadata_name, $v, "text", $user->getGUID(), ACCESS_LOGGED_IN, true, $site_guid);
 													}
 												} else {
@@ -109,8 +112,8 @@
 						$user = $users[0];
 						$users_already++;
 						
-						if(subsite_manager_on_subsite()){
-							if(!$site->isUser($user->getGUID())){
+						if (subsite_manager_on_subsite()) {
+							if (!$site->isUser($user->getGUID())) {
 								$site->addUser($user->getGUID());
 								
 								// notify user
@@ -134,7 +137,7 @@
 				// restore hidden users
 				access_show_hidden_entities($hidden);
 				
-				if(!empty($users_already) || !empty($users_created)){
+				if (!empty($users_already) || !empty($users_created)) {
 					unset($_SESSION["subsite_manager_import"]);
 					unlink($csv_location);
 					$forward_url = elgg_get_site_url() . "admin/users/import";
